connect api and add localjson

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000
+RAPID_API_KEY=1a6cc9495bmshb06c42e630166d0p130f73jsn6ddc79e1f45e
+RAPID_API_HOST=ufc-data1.p.rapidapi.com
