--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
