--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
-    "next": "14.2.5",
+    "next": "^15.1.7",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18"
