--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^15.1.7",
     "react": "^18",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
